# universal-orderbook-streamer

./: Cargo.toml  README.md
client/: Cargo.toml
client/protos/: orderbook.proto
data-streamer/: Cargo.toml
data-streamer/src/: lib.rs  model.rs
data-streamer/src/exchanges/binance/: model.rs
data-streamer/src/exchanges/bitstamp/: model.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
