[package]
name = "data-streamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
chrono = {version = "0.4.19", features = ["serde"]}
tokio-tungstenite = {version= "0.17.2", features = ["native-tls"] }
tokio = { version = "1.16.1", features = ["full"] }
url = "2.1.0"
async-trait = "0.1.57"
futures = "0.3.24"
serde-enum-str = "0.2.5"
log = "0.4"
pretty_env_logger = "0.4"